--- a/src/weatherman/weatherman.vcxproj
+++ b/src/weatherman/weatherman.vcxproj
@@ -58,7 +58,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>curllib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>curllib.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -83,6 +83,7 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\db\initialize.sql" />
     <None Include="curllib.dll">
       <DeploymentContent>true</DeploymentContent>
     </None>
