separate code file for table.h

--- a/src/weatherman/weatherman.vcxproj
+++ b/src/weatherman/weatherman.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="json.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="table.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\db\initialize.sql" />
